--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
   },
-  "name": "compie"
+  "name": "compie",
+  "description": "CLI tool that scaffolds React components."
 }
