manage: Added repository link to `package.json`

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   },
   "name": "compie",
   "description": "CLI tool that scaffolds React components.",
-  "funding": "https://github.com/sponsors/jaid"
+  "funding": "https://github.com/sponsors/jaid",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaid/compie"
+  }
 }
